- Added more images

--- a/Game_Culminating_MansivA/Game_Culminating_MansivA.csproj
+++ b/Game_Culminating_MansivA/Game_Culminating_MansivA.csproj
@@ -244,5 +244,20 @@
   <ItemGroup>
     <None Include="Resources\CyanKey.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\FallingTrap.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Lava.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\HealthPotion.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\WoodenCrate.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Lever.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
