-Added more images and some text for the tutorials, also sorted inventory to have the sword in the first slot for every level

--- a/Game_Culminating_MansivA/Game_Culminating_MansivA.csproj
+++ b/Game_Culminating_MansivA/Game_Culminating_MansivA.csproj
@@ -259,5 +259,17 @@
   <ItemGroup>
     <None Include="Resources\Lever.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Spike1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Spike2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Lever1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\FlippedLever.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
